feat: etcd as service manager to get through captcha service

--- a/pear-api/config/app.yaml
+++ b/pear-api/config/app.yaml
@@ -13,3 +13,8 @@ redis:
 grpc:
   addr: "127.0.0.1:8881"
   name: "user"
+etcd:
+  addrs:
+    - "127.0.0.1:20002"
+    - "127.0.0.1:20004"
+    - "127.0.0.1:20000"
