--- a/pear-user/config/app.yaml
+++ b/pear-user/config/app.yaml
@@ -11,5 +11,12 @@ zap:
 redis:
   source: "redis://default:123456@127.0.0.1:6380/0"
 grpc:
-  addr: "127.0.0.1:8001"
+  addr: "192.168.1.16:8001"
   name: "user"
+  version: "1.0.0"
+  weight: 2
+etcd:
+  addrs:
+    - "127.0.0.1:20002"
+    - "127.0.0.1:20004"
+    - "127.0.0.1:20000"
